# merlin

./: .env  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  bot.py  bot_imports.py  botclient.py  botclientlog.py  botmc.py  cfg.json  consolemod.py  easteregg.py  exceptions.py  index.js  kccsofficial.py  kccsofficialmc.py  keep_alive.py  logcfg.py  main.py  main_imports.py  manbot.py  package-lock.json  package.json  pyproject.toml  quickpoll.py  reports.json  requirement.txt  requirements.txt  setup.py  valstore.py  votes.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: greetings.yml  python-publish.yml
cogs/: .env  core.py  debug.py  fileman.py  fun.py  games.py  logcfg.py  man.py  mod.py  quickpoll.py  utilities.py  utils.py
commands/: help.js  ping.js  reload.js  role_ban.js  role_kick.js
data/: lastword.json  mcsrvs.csv  settings.json  warnings.db
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  nightly.md  visual-update.md
ext/: base_encoding.py  bot_settings.json  consolemod.py  const.py  dbctrl.py  imports_init.py  imports_share.py  logcfg.py  quickpoll.py  wrds.json
ext/chat/: chat.py  chats.sqlite3  chats.sqlite3-shm  chats.sqlite3-wal  chats.txt  test.py
ext/init/: diagnose.py  (+2 more)
samples/: def_globals.txt  def_locals.txt  jsrun.js  mc_crash.txt  pyoutput.txt  shoutput.txt  table.py  table_a.py  table_plan.py  table_programming_languages.py  table_shit.py  table_suggestion.py  table_tablename.py  table_test.py  table_tmp.py  warnList  warnings.db
src/: bot.py  main.py  merlin.py
(+31 files in other folders)
