[tool.poetry]
name = "merlin-py"
version = "0.1.0"
description = ""
authors = ["matriz windowsboy111"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
discord = "^1.0.1"
flask = "^1.1.2"
mcstatus = "^3.1.1"
pyTableMaker = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
