[tool.poetry]
name = "merlin-py"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pyTableMaker = "^1.2.1"
mcstatus = "^3.1.1"
"discord.py" = "^1.3.4"
python-dotenv = "^0.14.0"
psutil = "^5.7.2"
chatterbot-voice = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
